# mk1

./: .gitignore  Aice.py  Alice.py  Alice_personality.txt  EventBus.py  LocalModelFunc.py  MessageModel.py  PostTurnProcessor.py  README.md  RawChatHistory.py  SystemPrompt.py  TODO.md  chat_history.db  dialogue_history.txt  main copy.py  main.py  pyproject.toml  raw_chat_history.txt  tools.py
Agent/: Agent.py  OllamaTest.py  QwenClient.py
ChatStateSystem/: ChatStateSystem.py  DefaultChatStateSystem.py
ContextAssembler/: DefaultGlobalContextAssembler.py
DataClass/: AnalyzeResult.py  ChatEvent.py  ChatMessage.py  ChatState.py  EventType.py  PromptTemplate.py  TagType.py
LLM/: LLMAbstract.py  LLMManagement.py  OllamaFormated.py  QwenFormated.py
MemorySystem/: MemoryAssembler.py  MemoryPolicy.py  MemorySystem.py
MemorySystem/MemoryStore/: ChatStateStorage.py  DialogueStorage.py  IdentitiyMemory.py  MemoryStorage.py
PerceptionSystem/: Analyzeabstract.py  LtpAnalyze.py  OllamaAnalyze.py  PerceptionSystem.py  TextAnalyze.py
RawChatHistory/: RawChatHistory.py  RawChatHistoryFile.py  SqlitManagementSystem.py
config/: system_prompt.yaml  template_input.yaml
docs/: 1.md  2.md  3.md  DialogueStorage AI评价.md  TODO.md  gpt-整体流程.md  添加QuerySystem.md  阶段1AI总结.md  阶段进展-2026-01-11.md  阶段进展-2026-01-13.md  阶段进展-2026-01-19.md  阶段进展-2026-02-03.md  集成收尾问题清单.md  项目总结.md
src/: Alice.py  EventBus.py  PostTurnProcessor.py  SystemPrompt.bk.py  SystemPrompt.py  logging_config.py
tests/: analyze_result_merge_test.py  ltp_test.py  normalize_test.py  prompt_builder_test.py
(+66 files in other folders)
