[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mk1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "ltp>=4.2.14",
    "ltp-core>=0.1.4",
    "ltp-extension>=0.1.13",
    "openai>=2.14.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.25.0"]

[tool.setuptools.packages.find]
where = ["src"]